Set the footer z-index to avoid cover the card

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,7 @@
 
 html {
     width: 100%;
+    
 }
 
 *{
@@ -199,7 +200,8 @@ justify-content: center;
 
 /* -------------------------------------------------------- footer section */
 footer{
-    margin-top: 120px;
+    position: fixed;
+    bottom: 0;
     width:100%;
     display: grid;
     grid-template-columns: auto;
@@ -322,6 +324,7 @@ footer{
         column-gap: 0;
         row-gap: 10px;
         padding:10px;
+        z-index: -1;
     }
     #copyright-container p{
         font-size: 20px;
